--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
   "Paris": { "lat": 48.852969, "lon": 2.349903 },
   "Brest": { "lat": 48.383, "lon": -4.500 },
   "Quimper": { "lat": 48.000, "lon": -4.100 },
-  "Bayonne": { "lat": 43.500, "lon": -1.467 }
+  "Bayonne": { "lat": 43.500, "lon": -1.467 },
+  "Lens": { "lat": 50.43, "lon": 2.83 }
 };
 
 window.onload = function(){
@@ -278,20 +279,20 @@ window.onload = function(){
 
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <!--Machu Killian-->
-        <div id="ville_Bayonne" class="card bg-dark m-2">
+        <div id="ville_Lens" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
           <div class="card-header">
-            <div class="card-title h5">Bayonne</div>
-            <div class="card-subtitle text-gray">Capitale</div>
+            <div class="card-title h5">Lens</div>
+            <div class="card-subtitle text-gray">Ville</div>
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
+            <img src="https://www.francebleu.fr/s3/cruiser-production/2014/03/85ce1025-a514-11e3-8fe6-782bcb7402be/1200x680_maxnewsworldthree003665.jpg" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Insérez description...
+            Dans la ville de Lens vous retrouverez le club du RCL qui a gagné 2-1 contre Arsenal hier.
           </div>
         </div>
       </div>
