--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
   "Paris": { "lat": 48.852969, "lon": 2.349903 },
   "Brest": { "lat": 48.383, "lon": -4.500 },
   "Quimper": { "lat": 48.000, "lon": -4.100 },
-  "Bayonne": { "lat": 43.500, "lon": -1.467 }
+  "Bayonne": { "lat": 43.500, "lon": -1.467 },
+  "Amsterdam": {"lat":52.368388554466414,"lon":4.869617208162693}, 
 };
 
 window.onload = function(){
@@ -98,20 +99,20 @@ window.onload = function(){
       
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <!--Biet Lou-anne-->
-        <div id="ville_Quimper" class="card bg-dark m-2">
+        <div id="ville_Amsterdam" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
           <div class="card-header">
-            <div class="card-title h5">Quimper</div>
+            <div class="card-title h5">Amsterdam</div>
             <div class="card-subtitle text-gray">Capitale</div>
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
+            <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/e5/59/5e/caption.jpg?w=500&h=400&s=1" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Insérez description...
+            Amsterdam, capitale des Pays-Bas, est connue pour son patrimoine artistique, son système élaboré de canaux et ses étroites maisons à pignons, héritage de l'âge d'or de la ville, le XVIIe siècle. Le quartier des musées accueille le musée Van Gogh, le Rijksmuseum, présentant les œuvres de Rembrandt et de Vermeer, ainsi que le Stedelijk Museum, dédié à l'art moderne. Le vélo contribue pour beaucoup au caractère de la ville, qui compte un nombre élevé de pistes cyclables.
           </div>
         </div>
       </div>
