--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
                // nombres dans l'url sont lat et lon :
                // https://www.google.com/maps/@50.4255595,2.8231708,12.95z
                // correspond à Lens, avec lat : 50.4255595 lon :2.3231708
-  "Paris": { "lat": 48.852969, "lon": 2.349903 },
+  "Paris": { "lat": 36.17500344978097, "lon": -115.1558318665754 }, 
   "Brest": { "lat": 48.383, "lon": -4.500 },
   "Quimper": { "lat": 48.000, "lon": -4.100 },
   "Bayonne": { "lat": 43.500, "lon": -1.467 }
@@ -55,20 +55,20 @@ window.onload = function(){
       <!-- Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <!--Barlet Ethan-->
-        <div id="ville_Paris" class="card bg-dark m-2">
+        <div id="ville_Vegas" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
           <div class="card-header">
-            <div class="card-title h5">Paris</div>
-            <div class="card-subtitle text-gray">Capitale</div>
+            <div class="card-title h5">Las Vegas</div>
+            <div class="card-subtitle text-gray">Jolie Ville</div>
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
+            <img src="./img/lasvegas.jpg" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Insérez description...
+              C'est la fête h24 !
           </div>
         </div>
       </div>
