--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
   "Paris": { "lat": 36.17500344978097, "lon": -115.1558318665754 }, 
   "Brest": { "lat": 48.383, "lon": -4.500 },
   "Quimper": { "lat": 48.000, "lon": -4.100 },
-  "Bayonne": { "lat": 43.500, "lon": -1.467 },
-  "Meurchin" : {"lat":50.49541207899306, "lon":2.890619616742624},
+  "Bayonne": { "lat": 43.500, "lon": -1.467 }
 };
 
 window.onload = function(){
@@ -56,7 +55,7 @@ window.onload = function(){
       <!-- Début du div de la première ville -->
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <!--Barlet Ethan-->
-        <div id="ville_Vegas" class="card bg-dark m-2">
+        <div id="ville_Paris" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
@@ -259,20 +258,20 @@ window.onload = function(){
 
       <div class="column col-xs-12 col-sm-6 col-md-3 col-2 col-lg-1">
         <!--Legru Maxime-->
-        <div id="ville_Meurchin" class="card bg-dark m-2">
+        <div id="ville_Bayonne" class="card bg-dark m-2">
           <!--  L'id de la forme ville_A est nécessaire pour que le lien vers
                 la ville A fonctionne. Pensez à ajouter les coordonnées de A
                 dans le tableau ville, en début de fichier -->
           <div class="card-header">
-            <div class="card-title h5">Meurchin</div>
-            <div class="card-subtitle text-gray">Pas-de-Calais (62)</div>
+            <div class="card-title h5">Bayonne</div>
+            <div class="card-subtitle text-gray">Capitale</div>
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="https://media.letelegramme.fr/api/v1/images/view/63dd43bcb58dd23b17206955/web_golden_s/63dd43bcb58dd23b17206955.1" class="img-responsive">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/320px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            La ville a une gare, une poste et une maison.
+            Insérez description...
           </div>
         </div>
       </div>
