--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ window.onload = function(){
             <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/e5/59/5e/caption.jpg?w=500&h=400&s=1" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
-            Amsterdam, capitale des Pays-Bas, est connue pour son patrimoine artistique, son système élaboré de canaux et ses étroites maisons à pignons, héritage de l'âge d'or de la ville, le XVIIe siècle. Le quartier des musées accueille le musée Van Gogh, le Rijksmuseum, présentant les œuvres de Rembrandt et de Vermeer, ainsi que le Stedelijk Museum, dédié à l'art moderne. Le vélo contribue pour beaucoup au caractère de la ville, qui compte un nombre élevé de pistes cyclables.
+            Amsterdam, capitale des Pays-Bas, est connue pour son patrimoine artistique.
           </div>
         </div>
       </div>
