--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var villes = { // Seules les villes ajoutées dans ce tableau sont affichées su
                // nombres dans l'url sont lat et lon :
                // https://www.google.com/maps/@50.4255595,2.8231708,12.95z
                // correspond à Lens, avec lat : 50.4255595 lon :2.3231708
-  "Paris": { "lat": 36.17500344978097, "lon": -115.1558318665754 }, 
+  "Las Vegas": { "lat": 36.17500344978097, "lon": -115.1558318665754 },
   "Brest": { "lat": 48.383, "lon": -4.500 },
   "Quimper": { "lat": 48.000, "lon": -4.100 },
   "Bayonne": { "lat": 43.500, "lon": -1.467 },
