Update index.html Réctification de la source d'une image

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ window.onload = function(){
           </div>
           <div class="card-image">
             <!-- Utilisez de préférence des images de taille identique partout (ici : 320x200)-->
-            <img src="/export/etu/marion.gatti/git/carte/portofino.jpg" class="img-responsive">
+            <img src="portofino.jpg" class="img-responsive">
           </div>
           <div class="card-body bg-secondary text-dark">
             Portofino est située à l'ouest du golfe de Tigullio au fond d'une crique au sud-est du promontoire de Portofino à 36 km de Gênes. 
